tests/baselines/reference/parserES5ForOfStatement11.errors.txt
parserES5ForOfStatement11.ts(1,22): error TS2304: Cannot find name 'X'.


==== parserES5ForOfStatement11.ts (1 errors) ====
    for (const [a, b] of X) {
                         ~
!!! error TS2304: Cannot find name 'X'.
    }